<resources>
    <string name="app_name">HomeChef</string>

    <!-- Strings used for navigation -->
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_share">Share</string>
    <string name="menu_location">Closest Shop</string>
    <string name="menu_history">History</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for buttons-->
    <string name="button_login">Log in</string>
    <string name="button_register">Register</string>
    <string name="button_guest">Continue as Guest</string>


    <!-- Strings used for titles-->
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_categories" translatable="false">Categories</string>
    <string name="title_random">Random</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_activity_shopping">ShoppingActivity</string>


    <!-- Strings used for textviews -->
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="textview_search_for_random">Click to get a random meal</string>
    <string name="button_goto_instr">Go to instructions</string>
    <string name="title_randomize">Get random Meal</string>
    <string name="title_instrictions">Instructions</string>
    <string name="button_done">Search for another Meal!</string>
    <string name="title_getshopping">Choose This MEAL!</string>
    <string name="title_deleteAll">Delete All Favourites</string>
    <string name="menu_logout">Logout</string>

</resources>
