<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.homechef.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >

        <action
            android:id="@+id/action_navigation_search_to_navigation_history"
            app:destination="@id/drawer_history" />
    </fragment>
    <fragment
        android:id="@+id/navigation_random"
        android:name="com.example.homechef.ui.random.RandomFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_random" />
    <fragment
        android:id="@+id/drawer_favourites"
        android:name="com.example.homechef.ui.favourites.FavouriteFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_navigation_favourites_to_navigation_random"
            app:destination="@id/navigation_random" />
    </fragment>
    <fragment
        android:id="@+id/drawer_history"
        android:name="com.example.homechef.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_favourites"
            app:destination="@id/drawer_favourites" />
    </fragment>


</navigation>
